--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       My Lego Photo Project!
     </HEAD>
     <BODY>
-        <h1>testing commit</h1>
+        <h1>testing github commit</h1>
+        <script src="js/script.js"></script>
     </BODY>
   </HTML>
