pixelated art function working

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       My Lego Photo Project!
     </HEAD>
     <BODY>
-        <img id="input_img" src="ironman.jpeg" alt="iron man" width="1000" length="1080">
+        <img id="input_img" src="yellowcircle.jpeg" alt="iron man" width="1000" length="1080">
         <canvas id="myCanvas" width="1000" height="1080" style="border:1px solid#d3d3d3;">
             Your browser does not support the HTML5 canvas tag.</canvas>
         <script src="script.js"></script>
