updated file upload button (more dynamic)

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <p><input type="file"  accept="image/*" name="image" id="file"  onchange="loadFile(event)"></p>
     
         <img id="input_img" alt="iron man">
-        <canvas id="myCanvas"  width="1000" height="1080" style="border:1px solid">
-            Your browser does not support the HTML5 canvas tag.</canvas>
+        <!-- <canvas id="myCanvas" style="border:1px solid">
+            Your browser does not support the HTML5 canvas tag.</canvas> -->
 
         <script src="script.js"></script>
     </BODY>
   </HTML>
-  <!-- width="825" height="968" -->
+  <!-- width="825" height="968"     width="1000" height="1080"-->
