--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
         <img id="title" src="https://fontmeme.com/permalink/210904/255748049ce192ea9cc5bf217fe1d6f1.png" alt="lego-font" border="0">
       </header>
 
-      <div id="black_line"></div>
-      
+      <hr style="width:100%", size="10px", color=black>  
+
       <!--Drag and Drop html-->
       <div class="box">
         <div class="drag-area">
           <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
           <header>Drag & Drop to Upload File</header>
+          <img id="download-icon" src="file_download.png" alt="download icon" >
           <span>OR</span>
           <button>Browse File</button>
           <input type="file" hidden>
         </div>
       </div>
       
-        <div class="generate_button">
-          <button onclick="display_lego_photo();">GENERATE</button>
-        </div>    
+      <div class="generate">
+        <label for="scale">scale:</label>
+        <input type="text" id="scale" name="scale" size="4" maxlength="4" value="20"><br><br> 
+        <button onclick="display_lego_photo();">GENERATE</button>
+      </div>
 
 
       <div class="box">
