--- a/index.html
+++ b/index.html
@@ -31,59 +31,51 @@
         <form>
           <div class="multiselect">
             <div class="selectBox" onclick="showCheckboxes()">
-              <select>
+              <select id="select_dropdown">
                 <option>You can deselect lego colors</option>
               </select>
               <div class="overSelect"></div>
             </div>
             <div id="checkboxes">
-              <label for="0">
+              <label for="0" id="_0">
                 <input type="checkbox" id="0" checked />Black</label>
-              <label for="1">
+              <label for="1" id="_1">
                 <input type="checkbox" id="1" checked />Brick Yellow</label>
-              <label for="2">
+              <label for="2" id="_2">
                 <input type="checkbox" id="2" checked />Bright Blue</label>
-              <label for="3">
+              <label for="3" id="_3">
                 <input type="checkbox" id="3" checked />Bright Green</label>
-              <label for="4">
+              <label for="4" id="_4">
                 <input type="checkbox" id="4" checked />Bright Orange</label>  
-              <label for="5">
+              <label for="5" id="_5">
                 <input type="checkbox" id="5" checked />Bright Red</label>
-              <label for="6">
+              <label for="6" id="_6">
                 <input type="checkbox" id="6" checked />Bright Yellow</label>  
-              <label for="7">
+              <label for="7" id="_7">
                 <input type="checkbox" id="7" checked />Bright Yellowish Green</label>
-              <label for="8">
+              <label for="8" id="_8">
                 <input type="checkbox" id="8" checked />Dark Green</label>
-              <label for="9">
+              <label for="9" id="_9">
                 <input type="checkbox" id="9" checked />Dark Stone Grey</label>  
-              <label for="10">
+              <label for="10" id="_10">
                 <input type="checkbox" id="10" checked />Light Purple</label>
-              <label for="11">
+              <label for="11" id="_11">
                 <input type="checkbox" id="11" checked />Medium Lilac</label>  
-              <label for="12">
+              <label for="12" id="_12">
                 <input type="checkbox" id="12" checked />Medium Nougat</label>
-              <label for="13">
+              <label for="13" id="_13">
                 <input type="checkbox" id="13" checked />Medium Stone Grey</label>
-              <label for="14">
+              <label for="14" id="_14">
                 <input type="checkbox" id="14" checked />Reddish Brown</label>  
-              <label for="15">
+              <label for="15" id="_15">
                 <input type="checkbox" id="15" checked />Silver Metallic</label>
-              <label for="16">
+              <label for="16" id="_16">
                 <input type="checkbox" id="16" checked />White</label>  
             </div>
           </div>
         </form>
-        <!--
-  Lego exact colors:
-  
-  
-  
-  
-  
-  -->
         
-        <label for="scale">scale:</label>
+        <label for="scale">Scale:</label>
         <input type="text" id="scale" name="scale" size="4" maxlength="4" value="20"><br><br> 
         <button onclick="display_lego_photo();">GENERATE</button>
       </div>
