WORKING: updated css design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </HEAD>
     <BODY>
       <header>
-        <img id="title" src="https://fontmeme.com/permalink/210904/255748049ce192ea9cc5bf217fe1d6f1.png" alt="lego-font" border="0">
+        <img id="title" src="https://fontmeme.com/permalink/210905/1c4c9cf4f15282757884ef66436fc422.png" alt="lego-font" border="0">
       </header>
 
       <hr style="width:100%", size="10px", color=black>  
@@ -32,7 +32,7 @@
           <div class="multiselect">
             <div class="selectBox" onclick="showCheckboxes()">
               <select id="select_dropdown">
-                <option>You can deselect lego colors</option>
+                <option>Select Lego Colors</option>
               </select>
               <div class="overSelect"></div>
             </div>
@@ -89,6 +89,16 @@
       <footer>
         <p>Creator: Nikolas Milanovic<br>
         <a href="mailto:nikolas.milanovic@uwaterloo.ca">nikolas.milanovic@uwaterloo.ca</a></p>
+        <!-- AddToAny BEGIN -->
+        <div id="share_page" class="a2a_kit a2a_kit_size_32 a2a_default_style">
+          <h3>Share this page</h3>
+          <a class="a2a_button_facebook"></a>
+          <a class="a2a_button_twitter"></a>
+          <a class="a2a_button_email"></a>
+          <a class="a2a_button_reddit"></a>
+        </div>
+       <script async src="https://static.addtoany.com/menu/page.js"></script>
+  <!-- AddToAny END -->
       </footer>
 
       <script src="script.js"></script>
