WORKING: updated css design for footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!--footer-->
       <footer>
         <p>Creator: Nikolas Milanovic<br>
-        <a href="mailto:nikolas.milanovic@uwaterloo.ca">nikolas.milanovic@uwaterloo.ca</a></p>
+        <a id="email" href="mailto:nikolas.milanovic@uwaterloo.ca">nikolas.milanovic@uwaterloo.ca</a></p>
         <!-- AddToAny BEGIN -->
         <div id="share_page" class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <h3>Share this page</h3>
