WORKING: fixed js issue with selecting lego colors and touched css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       <!--customizable input-->
       
-      <div class="generate">
+      <div class="generate" id="generate">
         <form>
           <div class="multiselect">
             <div class="selectBox" onclick="showCheckboxes()">
