WORKING: partially added instructions for build

--- a/index.html
+++ b/index.html
@@ -84,7 +84,37 @@
       <!--canvas is appended to div output tag -->
       <div class="output" id="output">
       </div>
-      
+  
+      <div class="grid" id="grid">
+        <div class="cell">Top Left</div>
+        <div class="cell">Top Middle</div>
+        <div class="cell">Top Right</div>
+        <div class="cell">Middle Left</div>
+        <div class="cell">Middle Middle</div>
+        <div class="cell">Middle Right</div>
+        <div class="cell">Bottom Left</div>
+        <div class="cell">Bottom Middle</div>
+        <div class="cell">Bottom Right</div>
+      </div>
+
+      <!--instructions-->
+      <div class="instructions">
+        <div class="colors-required">
+          <ul id="thelist">
+            <li>Medium Nougat: 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 3</li>
+            <li>Item 3</li>
+            <li>Item 3</li>
+            <li>Item 3</li>
+          </ul>
+        </div>
+        <div id="build-instructions"></div>
+
+        <div class="output_instructions"></div>
+      </div>
+
       <!--footer-->
       <footer>
         <p>Creator: Nikolas Milanovic<br>
