WORKING: cleaned up css

--- a/index.html
+++ b/index.html
@@ -100,14 +100,8 @@
       <!--instructions-->
       <div class="instructions">
         <div class="colors-required">
-          <ul id="thelist">
-            <li>Medium Nougat: 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 3</li>
-            <li>Item 3</li>
-            <li>Item 3</li>
-            <li>Item 3</li>
+          <ul id="color-list">
+            <!--will dynamically be inserted during runtime-->
           </ul>
         </div>
         <div id="build-instructions"></div>
