WORKING: fixed bug with incorrect instruction (wrong num of pieces)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </HEAD>
     <BODY>
       <header>
-        <img id="title" src="https://fontmeme.com/permalink/210905/1c4c9cf4f15282757884ef66436fc422.png" alt="lego-font" border="0">
+        <img id="title" src="https://fontmeme.com/permalink/210905/1c4c9cf4f15282757884ef66436fc422.png" alt="My Lego Photo" border="0">
       </header>
 
       <hr style="width:100%", size="10px", color=black>  
@@ -26,7 +26,6 @@
       </div>
       
       <!--customizable input-->
-      
       <div class="generate" id="generate">
         <form>
           <div class="multiselect">
@@ -113,7 +112,7 @@
       <footer>
         <p>Creator: Nikolas Milanovic<br>
         <a id="email" href="mailto:nikolas.milanovic@uwaterloo.ca">nikolas.milanovic@uwaterloo.ca</a></p>
-        <!-- AddToAny BEGIN -->
+        <!-- share this page -->
         <div id="share_page" class="a2a_kit a2a_kit_size_32 a2a_default_style">
           <h3>Share this page</h3>
           <a class="a2a_button_facebook"></a>
@@ -122,7 +121,7 @@
           <a class="a2a_button_reddit"></a>
         </div>
        <script async src="https://static.addtoany.com/menu/page.js"></script>
-  <!-- AddToAny END -->
+
       </footer>
 
       <script src="script.js"></script>
