--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
         <div class="output_instructions"></div>
       </div>
 
+      <div class="total-legos"></div>
+
+      <div class="total-cost">
+        <h1 id="total"></h1>
+      </div>
+
       <!--footer-->
       <footer>
         <p>Creator: Nikolas Milanovic<br>
